2006-10-09  Roman Kennke <kennke@aicas.com>

	* gnu/testlet/javax/swing/JSplitPane/getDividerLocation.java,
	* gnu/testlet/javax/swing/plaf/basic/BasicSplitPaneUI/getDividerLocation.java,
	* gnu/testlet/javax/swing/plaf/basic/BasicSplitPaneUI/BasicHorizontalLayoutManager/layoutContainer.java:
	New tests.

2006-10-09  Roman Kennke <kennke@aicas.com>

	* gnu/testlet/javax/swing/JTree/isRowSelected.java
	(TestTree.isPathSelected): New overridden method for testing.
	(TestTree.getRowForPath): Removed.
	(TestTree.getPathForRow): New overridden method for testing.
	(isPathSelectedCalled): New field.
	(getPathForRowCalled): Renamed old getRowForPathCalled field.
	(test): Include new isPathSelected() test.
	(testGetRowForPath): Renamed method and check getPathForRow() instead
	of getRowForPath().
	(testCallIsRowSelected): New test method.

2006-10-09  Roman Kennke <kennke@aicas.com>

	* gnu/testlet/javax/swing/JTree/isRowSelected.java: New test.

2006-10-06  Roman Kennke <kennke@aicas.com>

	* junit/framework/Assert.java
	* junit/framework/AssertionFailedError.java
	* junit/framework/ComparisonFailure.java
	* junit/framework/Protectable.java
	* junit/framework/Test.java
	* junit/framework/TestCase.java
	* junit/framework/TestFailure.java
	* junit/framework/TestListener.java
	* junit/framework/TestResult.java
	* junit/framework/TestSuite.java
	* junit/runner/BaseTestRunner.java
	* junit/textui/TestRunner.java:
	New classes. Implements the core JUnit API for bridging JUnit into
	Mauve.
	* junit/framework/package.html: New file.

2006-10-06  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/util/Calendar/getInstance.java:
	(testMethod1): Added check for new instance,
	(testMethod2): Likewise,
	(testMethod3): Likewise,
	(testMethod4): Likewise.

2006-10-05  Gary Benson  <gbenson@redhat.com>

	* gnu/testlet/java/net/Socket/security.java: New test.

2006-10-05  Gary Benson  <gbenson@redhat.com>
