@@ -1,3 +1,7 @@
+2006-10-09  Gary Benson  <gbenson@redhat.com>
+
+	* gnu/testlet/java/net/ServerSocket/security.java: New test.
+
 2006-10-09  Roman Kennke <kennke@aicas.com>
 
 	* gnu/testlet/javax/swing/JSplitPane/getDividerLocation.java,
